--- a/Style/style.css
+++ b/Style/style.css
@@ -6,7 +6,7 @@
   
   body {
     /* background: url("../assets/bg.png") center/cover no-repeat; */
-    background: url("bg.png") center/cover no-repeat;
+    background: url("../Assets/bg.png") center/cover no-repeat;
     min-height: 100vh;
   }
   
