--- a/Style/style.css
+++ b/Style/style.css
@@ -1,96 +1,181 @@
 @import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap');
 
-* {
+  * {
     font-family: "Gowun Dodum", sans-serif;
-
+    color: white;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
   }
   
-  body {
-    background: url("../Assets/bg.png") center/cover no-repeat;
-    min-height: 100vh;
+  header {
+    background-color: #121212;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 0;
+    border-bottom: 1px solid black;
   }
   
+  body {
+    background-color: rgb(82, 86, 89);
+    min-height: 100vh;
+  }
+
+  button{  
+    font-weight: bold;
+
+    float: left;
+    font-size: medium;
+    font-weight: 600;
+   
+    border-radius: 5px;
+    transition: all 0.2s ;
+
+    background: #2b2b2b; 
+  }
+
+  button:hover {
+    background: rgb(54, 140, 169);
+  }
+
+  .search {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding: 20px 0;
+
+    label {
+      font-size: 25px;
+    }
+    
+    input {
+      margin-left: 20px;
+      min-width: 200px;
+      height: 40px;
+      padding: 5px 10px;
+    }
+    
+    button {
+      text-align: center;
+      
+      width: 60px;
+      height: 40px;
+      margin-left: 10px;
+      padding: 5px;
+    }
+  }
+  
+  input{ 
+    width: 30%;
+    background-color: #2b2b2b;
+    transition: all 0.2s ;
+    transition-property: box-shadow;
+  }
+  
+  input:hover{
+    box-shadow: 0px 0px 3px 1px rgba(255, 255, 255, 0.6)
+  }
+  
+  input::placeholder{
+    font-size: 15px;
+    font-weight: 700;
+  }
+
+  .sign-area{
+    position: relative;
+    width: 100%;
+    min-height: 800px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    background-image: url('https://t1.daumcdn.net/news/201804/19/singlelist/20180419183537445quxa.jpg');
+    background-position: center;
+    background-size: cover;
+
+    border-bottom: 2px solid black;
+
+    .sign {
+      width: 60%;
+      font-size: 80px;
+      position: relative;
+      z-index: 100;
+      text-align: center;
+    }
+
+    .copyRight{     
+      font-size: 20px;
+      position: absolute; 
+      right: 20px; 
+      bottom: 10px;
+      p{
+        color:rgb(172, 172, 172);
+      }
+    }
+  }
+  
+  .sign-area::before {
+    content: "";
+    
+    position: absolute;
+    top:0px;
+    left:0px;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4);
+  }
+
+   
+
   .card-list {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(5, 1fr);
     justify-content: center;
+    margin: 50px 100px auto 100px;
     border-bottom: 1px solid black;
+  }
+  
+  .card-container{
+    display: flex;
+    justify-content: center;
   }
   
   .movie-card {
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.12), 0 3px 6px rgba(0, 0, 0, 0.24);
     margin: 20px;
     padding: 20px;
-    width: 300px;
+    width: 330px;
     justify-content: center;
-    justify-self: center;
-    background-color: bisque;
+    
+    position: relative;
+
+    background-color: #2b2b2b;
     border-radius: 10px;
     cursor: pointer;
     user-select: none;
+
   }
   
   .movie-card img {
     width: 100%;
     border-radius: 10px;
   }
-  
-  header {
-    background-color: #ffe194;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 30px 0;
-  }
-  
-  .search {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    padding: 20px 0;
-    border-bottom: 1px solid black;
-  }
-  
-  .search label {
-    font-size: 25px;
-  }
-  
-  .search input {
-    margin-left: 20px;
-    min-width: 200px;
-    padding: 5px 10px;
-  }
-  
-  .search button {
-    margin-left: 10px;
-    padding: 5px;
-  }
-  
-  h3 {
-    margin-bottom: 10px;
-  }
 
+  .movie-rate{
+    position: absolute;
+    bottom: 10px;
+  }
+ 
   .bottom:first-child{
     display: flex;
     justify-content: center;
   }
 
-  nav a{
-    text-decoration: none;
-    color:black;
-    margin: 2em;
-  }
-
   .bottom button{
-    margin: 20px;
     width: 100px;
-    height : 80px;
-    font-weight: bold;
+    height: 50px;
+
+    margin: 2em 1em;
   }
 
-  .bottom #cur-page{
-    color: red;
-  }
+  
