--- a/Style/style.css
+++ b/Style/style.css
@@ -9,12 +9,26 @@
   }
   
   header {
-    background-color: #121212;
+    /* position: relative; */
+    position: fixed;
+    z-index: 101;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0px 0;
+    background-color: #121212;
     border-bottom: 1px solid black;
+     
+    .Home {
+      position: absolute;
+      left:10px;
+
+      button{
+        width : 100px;
+        height : 40px;
+      }
+    }
+    
   }
   
   body {
@@ -22,6 +36,7 @@
     min-height: 100vh;
   }
 
+  /* 전체 버튼 */
   button{  
     font-weight: bold;
 
@@ -39,19 +54,7 @@
     background: rgb(54, 140, 169);
   }
 
-  header{
-    position: relative;
-    .Home {
-      position: absolute;
-      left:10px;
-
-      button{
-        width : 100px;
-        height : 40px;
-      }
-    }
-  }
-
+  /* 검색창 */
   .search {
     width: 50%;
     display: flex;
@@ -95,15 +98,16 @@
     font-weight: 700;
   }
 
+  /* 간판 영역 */
   .sign-area{
     position: relative;
+    display: flex;
     width: 100%;
     min-height: 800px;
     justify-content: center;
     align-items: center;
-    display: flex;
     background-image: url('../Assets/sign_bg.jpg');
-    background-position: center;
+    background-position: left 0px top 0px;
     background-size: cover;
 
     border-bottom: 2px solid black;
@@ -139,7 +143,7 @@
   }
 
    
-
+  /* 영화 카드 리스트 */
   .card-list {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
@@ -148,25 +152,25 @@
     border-bottom: 1px solid black;
   }
   
+  /* 영화 카드 커버 */
   .card-container{
     display: flex;
     justify-content: center;
   }
   
+  /* 영화 카드 */
   .movie-card {
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.12), 0 3px 6px rgba(0, 0, 0, 0.24);
+    position: relative;
     margin: 20px;
     padding: 20px;
     width: 330px;
     justify-content: center;
     
-    position: relative;
-
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.12), 0 3px 6px rgba(0, 0, 0, 0.24);
     background-color: #2b2b2b;
     border-radius: 10px;
     cursor: pointer;
     user-select: none;
-
   }
   
   .movie-card img {
@@ -179,6 +183,7 @@
     bottom: 10px;
   }
  
+  /* 페이지 이동 버튼 영역 */
   .bottom:first-child{
     display: flex;
     justify-content: center;
